src/test/ui/generator/yield-while-ref-reborrowed.stderr
error[E0501]: cannot borrow `x` as immutable because previous closure requires unique access
  --> $DIR/yield-while-ref-reborrowed.rs:35:20
   |
LL |     let mut b = || {
   |                 -- closure construction occurs here
LL |         let a = &mut *x;
   |                       - previous borrow occurs due to use of `x` in closure
...
LL |     println!("{}", x); //~ ERROR
   |                    ^ borrow occurs here
LL |     b.resume();
LL | }
   | - borrow from closure ends here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0501`.
